--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,7 +1,10 @@
+body{
+    background-color: #71d9ff
+    
+}
 .content{
     height: 100vh;
     width: 100vw;
-    background: no-repeat linear-gradient(358deg,#00b0ff,#eeeeee );
     font-family: 'Poppins',sans-serif;
     font-size: 0.8em;
 }
