--- a/www/css/home.css
+++ b/www/css/home.css
@@ -4,7 +4,6 @@
 #photo{
     height: 30vh ;
     width: 65vw;
-
 }
 #name_button{
     /* height: 8vh ; */
@@ -17,4 +16,10 @@
 }
 .materialize-textarea::-webkit-input-placeholder{
     color: #130e59
+}
+
+.whitebg{
+    background-color: white; 
+    border: 1px solid black; 
+    border-radius: 10px
 }
