--- a/www/css/finder.css
+++ b/www/css/finder.css
@@ -1,4 +1,4 @@
-#photo {
+/* #photo {
   height: 30vh;
   width: 65vw;
 }
@@ -7,15 +7,29 @@
 }
 #icons {
   margin-top: 8vh;
-  /* background-color: chartreuse; */
-  /* border:1px solid black; */
+ border:1px solid darkblue;     
+ padding-left: 0px; 
+ padding-right: 0px;
+ background-color: chartreuse; 
 }
 #details {
   margin-top: 5vh;
-  /* background-color: chartreuse; */
-  /* border:1px solid black; */
+   background-color: chartreuse; 
+   border:1px solid black; 
+ } 
+.btn-act{ 
+   border:1px solid red;    
+   border-radius: 50%; 
+ } 
+#aux{
+  background-color: black; 
+}   */
+body{
+  background-color: black
 }
-.btn-act{
-  /* border: 5px solid pink;] */
-  border-block: 10px solid black
+.testeclass{
+  /* border: 3px solid black   */
+}
+.totalcard{
+  margin-top: 5vh
 }
