--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,23 +1,29 @@
 body{
-    /* background-color: #0f3f50; */
-    /* background-color: #0d0436e3 ; */
-    background-color: #101938 ;
-    /* background-image: url('../img/texture.jpg') */
-    
+    background-color: #101938
 }
 .content{
     height: 100vh;
     width: 100vw;
     font-family: 'Poppins',sans-serif;
-    font-size: 0.8em;
-    
+    font-size: 0.8em    
 }
 .logo{
-    /* background: rgb(32, 164, 208); */
     width: 40vw;
-    height: 35vh;
+    height: 35vh
 }
-
-.formcard{
-    border-radius: 50%;
+#card{
+    border-radius: 5%;
+    box-shadow: 5px -9px 6px 0px rgb(34, 38, 90);
+}
+.btn-bg{
+    background-color: #101938;
+    border: 2px solid #101938;
+    border-radius: 4%;
+    font-family: 'Courier New', Courier, monospace
+}
+#registerdiv{
+    margin-top: 3vh;
+}
+li{
+    background-color: #e8eaf6
 }
